@@ -3,6 +3,8 @@ Summary of important user-visible changes for instrument-control 0.3.1+:
 
   ** SERIAL: added 'status' and 'bytesavailable' properties
 
+  ** tcpip(): added wrapper to be matlab compatible(ish)
+
 Summary of important user-visible changes for instrument-control 0.3.1:
 -------------------------------------------------------------------
 
